# ballistic

./: .gitmodules  CMakeLists.txt
asn-analysis/: CMakeLists.txt
asn-analysis/include/: config.hpp  csvutility.hpp  figure.hpp  forecast.hpp  measurement.hpp  model.hpp  rotator.hpp  spaceweather.hpp  timer.hpp  timeutility.hpp
asn-analysis/src/: atmosphere.cpp  computation.cpp  config.cpp  forecast.cpp  geometry.cpp  initgpt.cpp  main.cpp  measurement.cpp  model.cpp  rotator.cpp  spaceweather.cpp  timeutility.cpp
asndataproc/: CMakeLists.txt
asndataproc/include/: atmosphere.hpp  config.hpp  forecast.hpp  geometry.hpp  measurement.hpp  model.hpp  printutility.hpp  rotator.hpp  timeutility.hpp
asndataproc/src/: atmosphere.cpp  computation.cpp  config.cpp  csvutility.cpp  figure.cpp  forecast.cpp  geometry.cpp  main.cpp  measurement.cpp  model.cpp  rotator.cpp  spaceweather.cpp  timeutility.cpp
async/: CMakeLists.txt
ballistic/: CMakeLists.txt
ballistic/include/: atmosphere1981.h  ball.hpp  egm.h  geopotential.h  integration.hpp  maths.hpp  optimize.hpp  orbit_evaluation.h  solar_system.h  timefmt.hpp  times.hpp  transform.h  transform.hpp
ballistic/src/: atmosphere1981.cpp  egm.cpp  gpt.cpp  jd.cpp  maths.cpp  optimize.cpp  simd.cpp  solar_system.cpp  sunmoon.cpp  timefmt.cpp  times.cpp  transform.cpp  vector.cpp  vsdebug.natvis
csv/: CMakeLists.txt
csv/include/: atmosphere.hpp  computation.hpp  config.hpp  csvutility.hpp  figure.hpp  fileutility.hpp  forecast.hpp  measurement.hpp  model.hpp  spaceweather.hpp
csv/src/: atmosphere.cpp  computation.cpp  config.cpp  figure.cpp  fileutility.cpp  forecast.cpp  initgpt.cpp  main.cpp  measurement.cpp  model.cpp  spaceweather.cpp  timer.cpp  timeutility.cpp
example/: CMakeLists.txt
graphic/: CMakeLists.txt
horbeval/: CMakeLists.txt
horbeval/include/core/: geometry.h  highorbit.h  interface.h  observation.h
horbeval/include/gui/: guisettings.h  logger.h  mainmodel.h  mainview.h  pathview.h  plotview.h  tablemodel.h
horbeval/resources/: observatories.json  sat11561.txt
horbeval/src/: main.cpp
horbeval/src/core/: geometry.cpp  highorbit.cpp  interface.cpp  json.cpp  observation.cpp
horbeval/src/gui/: guisettings.cpp  logger.cpp  mainmodel.cpp  mainview.cpp  pathview.cpp  plotview.cpp  tablemodel.cpp
json/: CMakeLists.txt
json/include/: json_serialization.hpp
libraries/: CMakeLists.txt
libraries/maths/: CMakeLists.txt
libraries/maths/include/: arithmetics.h  assertion.h  conversion.h  integrators.h  linalg.h  optimize.h  statistics.h
libraries/maths/maths/: CMakeLists.txt
libraries/maths/maths/include/: adams_integrator.h  arithmetics.h  assertion.h  conversion.h  dynamic_matrix.h  dynamic_vector.h  integration.h  linalg.h  mathconstants.h  optimize.h  polynomial.h  quaternion.h  runge_kutta_integrator.h  static_matrix.h  static_vector.h  statistics.h
libraries/maths/maths/src/: assertion.cpp  functions.cpp  matrix.cpp  polynomial.cpp  quaternion.cpp  vector.cpp  vsdebug.natvis
libraries/maths/src/: assertion.cpp  matrix.cpp  optimize.cpp  polynomial.cpp  quaternion.cpp  vector.cpp
libraries/maths/tests/: CMakeLists.txt  linalg_functions_test.cpp  matrix_arithmetics_test.cpp  vector_arithmetics_test.cpp
libraries/times/tests/: CMakeLists.txt  datetime_test.cpp  juliandate_test.cpp
mathlib/: CMakeLists.txt
mathlib/example/: CMakeLists.txt
mathlib/example/include/: auxiliaries.hpp
mathlib/example/src/: auxiliaries.cpp  main.cpp  testmat.cpp  testmatrix.cpp  testpoly.cpp  testquaternion.cpp  testvec.cpp  testvector.cpp
mathlib/mathlib/: CMakeLists.txt
mathlib/mathlib/include/: maths.hpp  optimization.hpp
mathlib/mathlib/src/: maths.cpp  optimization.cpp  vsdebug.natvis
observation/: CMakeLists.txt
parallel/: CMakeLists.txt
plot/: CMakeLists.txt
plot/include/: plot.hpp
plot/src/: plot.cpp
projects/: CMakeLists.txt
projects/highorbit_evaluation/: CMakeLists.txt
projects/highorbit_evaluation/include/: celestrack_managing.h  geometry_models.h  highorbit_models.h  json_utils.h  mainwindow.h  model_wrapper.h  structure_type.h  viewmodel.h
projects/highorbit_evaluation/resources/: X11561.json
projects/highorbit_evaluation/src/: celestrack_managing.cpp  geometry_models.cpp  json_utils.cpp  main.cpp  mainwindow.cpp  model_wrapper.cpp  structure_types.cpp  viewmodel.cpp
protocol/: CMakeLists.txt
resources/: jgm3.txt
rkm/: CMakeLists.txt
rkm/include/core/: computation.hpp  forecast.hpp  formatoutput.hpp  formatting.hpp  models.hpp  motion.hpp  observation.hpp  rotation.hpp  settings.hpp
rkm/include/gui/: datamodel.hpp
rkm/src/: main.cpp
rkm/src/core/: computation.cpp  forecast.cpp  formatoutput.cpp  formatting.cpp  json.cpp  models.cpp  motion.cpp  observation.cpp  rotation.cpp  settings.cpp
rkm/src/gui/: datamodel.cpp  mainmodel.cpp  presenter.cpp
scripts/: copydll.cmake  functions.cmake
sparkle-analysis/: CMakeLists.txt
sparkle-analysis/include/: forecast.hpp  gui.hpp  logger.hpp  mainmodel.hpp  mainview.hpp  motion.hpp  observation.hpp  pathview.hpp  residual_graphic.hpp  residuals_iterator.hpp  residuals_provider.hpp  settings.hpp  table_data_provider.hpp  table_view.hpp  tree_data_provider.hpp  tree_view.hpp
sparkle-analysis/include/core/: computation.hpp  forecast.hpp  interval.hpp  logger.hpp  models.hpp  motion.hpp  observation.hpp
sparkle-analysis/include/gui/: gui.hpp  mainmodel.hpp  mainview.hpp  pathview.hpp  presenter.hpp
sparkle-analysis/src/: forecast.cpp  formatoutput.cpp  gui.cpp  guisrc.qrc  interval.cpp  json.cpp  logger.cpp  main.cpp  mainmodel.cpp  mainview.cpp  motion.cpp  pathview.cpp  residual_graphic.cpp  settings.cpp  table_view.cpp  tle.cpp  tree_view.cpp
sparkle-analysis/src/core/: computation.cpp  forecast.cpp  formatoutput.cpp  interval.cpp  json.cpp  logger.cpp  models.cpp  motion.cpp  tle.cpp
sparkle-analysis/src/gui/: datamodel.cpp  gui.cpp  mainmodel.cpp  mainview.cpp  pathview.cpp
time/: CMakeLists.txt
url/: CMakeLists.txt
urlproc/: CMakeLists.txt
utility/: CMakeLists.txt
(+78 files in other folders)
